--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     </div>
 
     <!-- <div class="tasks">
-        <div> <a href="./index2.html" class="plus">  + </a>  </div>
+         <div> 
+            <a href="./index2.html" class="plus">  + </a>  
+        </div>
         
     </div> 
     <div class="newtask"> <a href="./index2.html" >  Add New Task </a>  </div> -->
 
-    <a href="./index2.html" id="newtask">
-     <p id="newtask"><i class="fa-duotone fa-circle-plus"></i> <a href="./index2.html" id="newtask">Add new task</a></p>   
-    </a>
+    <p class="newtask"><a href="./index2.html" class="newtask">
+        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
+   </p> 
     
     <br>
     <br>
