--- a/index2.html
+++ b/index2.html
@@ -14,11 +14,9 @@
         <a href="./index2.html">  Tasks <span class="lists">  List </span></a>
     </div>
 
-    <div class="tasks">
-        <div> <a href="./index2.html" class="plus">  + </a>  </div>
-        
-    </div> 
-    <div class="newtask"> <a href="./index2.html" >  Add New Task </a>  </div>
+    <p class="newtask"><a href="./index2.html" class="newtask">
+        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
+   </p> 
     <br>
     <br>
     <div class="container">
@@ -77,9 +75,9 @@
 </div>
 
     <div class="new1">
-        <h4>Add New Task&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
+        <h4>Add New Task&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index3.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
         <hr>
-        <br>
+        
         <form action="">
               <input type="text" placeholder="Learn C++"><br>  
               <a href="./index3.html" class="addTaskbtn"> + Add Task</a>
