--- a/index3.html
+++ b/index3.html
@@ -16,12 +16,9 @@
      <br>
     <a  href="./index4.html" class="arrow">
         <i class="fa-solid fa-circle-arrow-left">Back</i>
-    </a>
-    <div class="tasks1">
-        <div> <a href="./index2.html" class="plus">  + </a>  </div>
-    </div> 
-
-    <div class="newtask1"> <a href="./index2.html" > Add New Task </a>  </div>
+    </a><p class="newtask2"><a href="./index2.html" class="newtask2">
+        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
+   </p> 
     <br>
     <br>
     <div class="container1">
