--- a/index4.html
+++ b/index4.html
@@ -18,11 +18,9 @@
     <a  href="./index4.html" class="arrow">
         <i class="fa-solid fa-circle-arrow-left">Back</i>
     </a>
-    <div class="tasks1">
-        <div> <a href="./index2.html" class="plus">  + </a>  </div>
-    </div> 
-
-    <div class="newtask1"> <a href="./index2.html" > Add New Task </a>  </div>
+    <p class="newtask2"><a href="./index2.html" class="newtask2">
+        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
+   </p> 
     <br>
     <br>
     <div class="container1">
@@ -39,10 +37,10 @@
 
 <div class="new1">
     <h4>Add New Item&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
-    
+    <hr>
     <form action="">
           <input type="text" placeholder="Visit famous places"><br>
-          <a href="./index3.html" class="addTaskbtn"> + Add Task</a>
+          <a href="./index3.html" class="addTaskbtn"> + Add Item</a>
     </form>
 </div>
 
