--- a/index2.html
+++ b/index2.html
@@ -75,12 +75,12 @@
 </div>
 
     <div class="new1">
-        <h4>Add New Task&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index3.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
+        <h4>Add New Task&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
         <hr>
         
         <form action="">
               <input type="text" placeholder="Learn C++"><br>  
-              <a href="./index3.html" class="addTaskbtn"> + Add Task</a>
+              <a href="./index4.html" class="addTaskbtn"> + Add Task</a>
         </form>
     </div>
     
