--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
     </div>
      <br>
      <br>
-    <a  href="./index4.html" class="arrow">
+    <a  href="./index.html" class="arrow">
         <i class="fa-solid fa-circle-arrow-left">Back</i>
     </a><p class="newtask2"><a href="./index2.html" class="newtask2">
         <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
