--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo App Web</title>
     <link rel="stylesheet" href="./stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
 </head>
@@ -15,17 +15,36 @@
     </div>
 
     <!-- <div class="tasks">
-         <div> 
-            <a href="./index2.html" class="plus">  + </a>  
-        </div>
-        
-    </div> 
-    <div class="newtask"> <a href="./index2.html" >  Add New Task </a>  </div> -->
-
-    <p class="newtask"><a href="./index2.html" class="newtask">
-        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
-   </p> 
+        <div> 
+            <a href="./index2.html" class="plus">  + </a> 
+        </div> 
+        </div> 
+        <div class="newtask">
+            <a href="./index2.html" >  Add New Task </a>  
+        </div> 
+    -->
+    <br>
+    <a href="./index2.html" class="newtask">
+        <i class="fa-solid fa-circle-plus fa-xl" style="color: #1968f0;"></i> Add new task  
+   </a> 
     
+
+    <!-- <div class="button">
+        <a href="./index2.html" class="plus plusz"> <i class="fa-sharp fa-solid fa-plus"></i></a>
+    </div> -->
+
+     <!-- <div class="circleplus">
+        <a href="./index2.html">
+            <div class="plus1">
+                <div class="child1">
+                    <p>+</p>
+                </div>
+                <div class="child2">
+                    <p>Add New Task</p>
+                </div>
+            </div>
+        </a>
+    </div>  -->
     <br>
     <br>
 
