--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">.
     <link rel="stylesheet" href="./stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
-    <title>Document</title>
+    <title>Todo App Web</title>
 </head>
 <body>
 <div class="maincontainer1">
@@ -14,9 +14,10 @@
         <a href="./index2.html">  Tasks <span class="lists">  List </span></a>
     </div>
 
-    <p class="newtask"><a href="./index2.html" class="newtask">
-        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
-   </p> 
+    <br>
+    <a href="./index2.html" class="newtask">
+        <i class="fa-solid fa-circle-plus fa-xl" style="color: #1968f0;"></i> Add new task   
+   </a>
     <br>
     <br>
     <div class="container">
@@ -64,20 +65,16 @@
             <span id="text">Design of Everyday</span>  </label> <br> <br>
             <label for="Alchemist"><input type="checkbox" name="Alchemist" value=""/>Alchemist</label>
         </div>
-
-  
-
    <!-- <i class="fa-solid fa-house"></i>  -->
-    </div>
-
-    </div>
+</div>
+</div>
 
 </div>
 
     <div class="new1">
         <h4>Add New Task&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
         <hr>
-        
+        <br>
         <form action="">
               <input type="text" placeholder="Learn C++"><br>  
               <a href="./index4.html" class="addTaskbtn"> + Add Task</a>
