--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
-    <title>Document</title>
+    <title>Todo App Web</title>
 </head>
 <body>
     <div class="navbar">
@@ -16,11 +16,11 @@
      <br>
     <a  href="./index.html" class="arrow">
         <i class="fa-solid fa-circle-arrow-left">Back</i>
-    </a><p class="newtask2"><a href="./index2.html" class="newtask2">
-        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
-   </p> 
+    </a><a href="./index2.html" class="newtask2">
+        <i class="fa-solid fa-circle-plus fa-xl" style="color: #1968f0;"></i> Add new task   
+   </a>
     <br>
-    <br>
+    <br>            
     <div class="container1">
     <div class="box"> 
         <h2 class="h2"> <a href="./index3.html"> Trip to Paris </a> </h2> <hr>
