--- a/index4.html
+++ b/index4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
-    <title>Document</title>
+    <title>Todo App Web</title>
 </head>
 <body>
     <div class="maincontainer2">
@@ -18,9 +18,10 @@
     <a  href="./index4.html" class="arrow">
         <i class="fa-solid fa-circle-arrow-left">Back</i>
     </a>
-    <p class="newtask2"><a href="./index2.html" class="newtask2">
-        <i class="fa-duotone fa-circle-plus"></i> Add new task</a>
-   </p> 
+    <br>
+    <a href="./index2.html" class="newtask">
+        <i class="fa-solid fa-circle-plus fa-xl" style="color: #1968f0;"></i> Add new task   
+   </a>
     <br>
     <br>
     <div class="container1">
@@ -36,7 +37,8 @@
 </div>
 
 <div class="new1">
-    <h4>Add New Item&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
+    <h4>Add New Item&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index3.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
+    
     <hr>
     <form action="">
           <input type="text" placeholder="Visit famous places"><br>
