--- a/index4.html
+++ b/index4.html
@@ -19,7 +19,7 @@
         <i class="fa-solid fa-circle-arrow-left">Back</i>
     </a>
     <br>
-    <a href="./index2.html" class="newtask">
+    <a href="./index2.html" class="newtask2">
         <i class="fa-solid fa-circle-plus fa-xl" style="color: #1968f0;"></i> Add new task   
    </a>
     <br>
