--- a/index4.html
+++ b/index4.html
@@ -15,10 +15,11 @@
     </div>
      <br>
      <br>
+     <div class="container3">
     <a  href="./index4.html" class="arrow">
         <i class="fa-solid fa-circle-arrow-left">Back</i>
     </a>
-    <br>
+    
     <a href="./index2.html" class="newtask2">
         <i class="fa-solid fa-circle-plus fa-xl" style="color: #1968f0;"></i> Add new task   
    </a>
@@ -35,7 +36,7 @@
     </div>
     </div>
 </div>
-
+</div>
 <div class="new1">
     <h4>Add New Item&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index3.html"><i class="fa-solid fa-xmark" id="close"></i></a></h4>
     
